<resources>
    <string name="app_name">Anton Altgauzen</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet,consectetur adipiscing elit.
        Integer molestie pellentesque massa, eget laoreet metus consectetur sit amet.
    </string>
    <string name="header_rating">
        Rating
    </string>
    <string name="header_projects">
        Projects
    </string>
    <string name="header_code_lines">
        Code-lines
    </string>
    <string name="header_phone">
        Phone number
    </string>
    <string name="header_email">
        E-mail
    </string>
    <string name="header_vk_profile">
        VK profile
    </string>
    <string name="header_repository">
        Repository
    </string>
    <string name="header_about">
        About
    </string>


    <string name="user_profile.placeholder.image">Change profile photo</string>

    <!-- drawer header string-->
    <string name="drawer_header_user_name">
        Altgauzen Anton
    </string>
    <string name="drawer_header_user_email">
        Greknmd@gmail.com
    </string>
    <string name="user_profile.dialog.galery">Load from gallery</string>
    <string name="user_profile.dialog.camera">Take a photo</string>
    <string name="user_profile.dialog.cancel">Cancel</string>
    <string name="user_profile.dialog.title">Change profile photo</string>
    <string name="user_profile.chose.message">Chose photo</string>
    <!--Login screen-->
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="mail">greknmd@gmail.com</string>
    <string name="e_mail">E-mail</string>

    <string name="emailValid">"[a-zA-Z0-9\\+\\.\\_\\%\\-\\+]{1,256}" +
	            "\\@" +
	            "[a-zA-Z0-9][a-zA-Z0-9\\-]{0,64}" +
	            "(" +
	                "\\." +
	                "[a-zA-Z0-9][a-zA-Z0-9\\-]{0,25}" +
	            ")+"</string>
    <string name="ff_medium">16</string>


</resources>
