<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_medial_24"
        android:paddingRight="@dimen/spacing_medial_24"
        android:paddingTop="@dimen/spacing_medial_24"
        android:paddingBottom="@dimen/spacing_medial_24"
        android:layout_centerInParent="true"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_normal_16"
            android:text="@string/login"
            android:textSize="20sp"
            android:textColor="@color/color_accent"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="@dimen/spacing_normal_16">

            <EditText
                android:id="@+id/user_mail"
                style="@style/login_et"
                android:inputType="textEmailAddress"
                android:hint="@string/e_mail"
                android:text="@string/mail"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="@dimen/spacing_normal_16">

            <EditText
                android:id="@+id/password_et"
                style="@style/login_et"
                android:inputType="text"
                android:hint="@string/password"
                android:text="@string/password"
                android:textColor="@color/grey"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/color_accent"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/spacing_normal_16"/>

        <TextView
            android:id="@+id/fgt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:text="@string/forgot_password"
            android:textColor="@color/grey"
            />

    </LinearLayout>



</RelativeLayout>