<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:id="@+id/nested_scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior=".ui.behaviors.CustomNestedScrollBehavior"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        //phone
        <LinearLayout style="@style/main_activity_itemLayout">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_call_black_24dp"/>

            <LinearLayout style="@style/main_activity_textInputLayout_container">
                <android.support.design.widget.TextInputLayout
                    style="@style/main_activity_textInputLayout">
                    <EditText
                        style="@style/main_activity_textEdit"
                        android:id="@+id/phone_et"
                        android:hint="@string/header_phone"
                        android:inputType="phone"
                        android:text="0545953586"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/call_img"
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        </LinearLayout>

        <View style="@style/main_activity_divider"/>

        //email
        <LinearLayout style="@style/main_activity_itemLayout">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_email_black_24dp"/>

            <LinearLayout style="@style/main_activity_textInputLayout_container">
                <android.support.design.widget.TextInputLayout
                    style="@style/main_activity_textInputLayout">
                    <EditText
                        style="@style/main_activity_textEdit"
                        android:id="@+id/email_et"
                        android:hint="@string/header_email"
                        android:inputType="textEmailAddress"
                        android:text="email@gmail.com"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/email_img"
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>

        <View style="@style/main_activity_divider"/>

        //vk profile
        <LinearLayout style="@style/main_activity_itemLayout">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_vk_grey_24dp"/>

            <LinearLayout style="@style/main_activity_textInputLayout_container">
                <android.support.design.widget.TextInputLayout
                    style="@style/main_activity_textInputLayout">
                    <EditText
                        style="@style/main_activity_textEdit"
                        android:id="@+id/vk_et"
                        android:hint="@string/header_vk_profile"
                        android:inputType="text"
                        android:text="vk.com/id167541569"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/vk_img"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View style="@style/main_activity_divider"/>

        //github
        <LinearLayout style="@style/main_activity_itemLayout">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_github_grey_24dp"/>

            <LinearLayout style="@style/main_activity_textMultilineInputLayout_container">
                <android.support.design.widget.TextInputLayout
                    style="@style/main_activity_textInputLayout">
                    <EditText
                        style="@style/main_activity_textEdit"
                        android:id="@+id/git_et"
                        android:hint="@string/header_repository"
                        android:inputType="textMultiLine"
                        android:text="github.com/GrekNMD/DevIntensive"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/git_img"
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View style="@style/main_activity_divider"/>

        //about
        <LinearLayout style="@style/main_activity_itemLayout">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_room_black_24dp"/>

            <LinearLayout style="@style/main_activity_textMultilineInputLayout_container">

                <android.support.design.widget.TextInputLayout
                    style="@style/main_activity_textInputLayout">

                    <EditText
                        style="@style/main_activity_textEdit"
                        android:id="@+id/about_et"
                        android:hint="@string/header_about"
                        android:inputType="textMultiLine"
                        android:text="@string/lorem_ipsum"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>