<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.MainActivity"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_coordinator_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/color_primary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/user_photo_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_image_size"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar_image_2"
                android:fitsSystemWindows="true"/>

            <android.support.v7.widget.Toolbar
                android:theme="@style/AppTheme.PopupOverlay"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:titleTextColor="@color/white"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>



    </android.support.design.widget.AppBarLayout>

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        //main layer
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/spacing_medial_24"
            android:paddingTop="@dimen/spacing_medial_24">

            <LinearLayout
                style="@style/main_activity_title_item_container.side">
                <TextView
                    style="@style/main_activity_title_caption"
                    android:text="5"/>
                <TextView
                    style="@style/main_activity_title_text"
                    android:text="@string/header_rating"/>
            </LinearLayout>

            <View style="@style/main_activity_vertical_divider"/>

            <LinearLayout
                style="@style/main_activity_title_item_container">
                <TextView
                    style="@style/main_activity_title_caption"
                    android:text="5"/>
                <TextView
                    style="@style/main_activity_title_text"
                    android:text="@string/header_code_lines"/>
            </LinearLayout>

            <View style="@style/main_activity_vertical_divider"/>

            <LinearLayout
                style="@style/main_activity_title_item_container.side">
                <TextView
                    style="@style/main_activity_title_caption"
                    android:text="5"/>
                <TextView
                    style="@style/main_activity_title_text"
                    android:text="@string/header_projects"/>
            </LinearLayout>

        </LinearLayout>

        //phone
        <LinearLayout style="@style/main_activity_itemLayout">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_call_black_24dp"/>

            <LinearLayout style="@style/main_activity_textInputLayout_container">
                <android.support.design.widget.TextInputLayout
                    style="@style/main_activity_textInputLayout">
                    <EditText
                        style="@style/main_activity_textEdit"
                        android:id="@+id/phone_et"
                        android:hint="@string/header_phone"
                        android:inputType="phone"
                        android:text="0545953586"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/call_img"
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        </LinearLayout>

        <View style="@style/main_activity_divider"/>

        //email
        <LinearLayout style="@style/main_activity_itemLayout">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_email_black_24dp"/>

            <LinearLayout style="@style/main_activity_textInputLayout_container">
                <android.support.design.widget.TextInputLayout
                    style="@style/main_activity_textInputLayout">
                    <EditText
                        style="@style/main_activity_textEdit"
                        android:id="@+id/email_et"
                        android:hint="@string/header_email"
                        android:inputType="textEmailAddress"
                        android:text="email@gmail.com"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>

        <View style="@style/main_activity_divider"/>

        //vk profile
        <LinearLayout style="@style/main_activity_itemLayout">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_vk_grey_24dp"/>

            <LinearLayout style="@style/main_activity_textInputLayout_container">
                <android.support.design.widget.TextInputLayout
                    style="@style/main_activity_textInputLayout">
                    <EditText
                        style="@style/main_activity_textEdit"
                        android:id="@+id/vk_et"
                        android:hint="@string/header_vk_profile"
                        android:inputType="text"
                        android:text="vk.com/id167541569"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View style="@style/main_activity_divider"/>

        //github
        <LinearLayout style="@style/main_activity_itemLayout">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_github_grey_24dp"/>

            <LinearLayout style="@style/main_activity_textMultilineInputLayout_container">
                <android.support.design.widget.TextInputLayout
                    style="@style/main_activity_textInputLayout">
                    <EditText
                        style="@style/main_activity_textEdit"
                        android:id="@+id/git_et"
                        android:hint="@string/header_repository"
                        android:inputType="textMultiLine"
                        android:text="github.com/GrekNMD/DevIntensive"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View style="@style/main_activity_divider"/>

        //about
        <LinearLayout style="@style/main_activity_itemLayout">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_room_black_24dp"/>

            <LinearLayout style="@style/main_activity_textMultilineInputLayout_container">

                <android.support.design.widget.TextInputLayout
                    style="@style/main_activity_textInputLayout">

                    <EditText
                        style="@style/main_activity_textEdit"
                        android:id="@+id/about_et"
                        android:hint="@string/header_about"
                        android:inputType="textMultiLine"
                        android:text="@string/lorem_ipsum"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_create_black_24dp"
        app:layout_anchor="@id/appbar_layout"
        app:layout_anchorGravity="bottom|right"
        android:layout_marginRight="@dimen/fab_right_space"/>

</android.support.design.widget.CoordinatorLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
