<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_coordinator_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/color_primary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <ImageView
                        android:id="@+id/user_photo_img"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/profile_image_size"
                        android:scaleType="centerCrop"
                        android:src="@drawable/user_bg"
                        android:fitsSystemWindows="true"/>

               <android.support.v7.widget.Toolbar
                    android:theme="@style/AppTheme.PopupOverlay"
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:titleTextColor="@color/white"
                    app:theme="@style/ToolBarStyle"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:layout_collapseMode="pin"/>

            </android.support.design.widget.CollapsingToolbarLayout>



        </android.support.design.widget.AppBarLayout>

        //main layer
        <LinearLayout
            android:id="@+id/user_info_wrapper"
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_info_size"
            android:background="@color/grey"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/spacing_medial_24"
            android:paddingTop="@dimen/spacing_medial_24"
            app:layout_behavior=".ui.behaviors.UserInfoBehavior"
            app:behavior_min_height="@dimen/size_medium_56"
            >

            <LinearLayout
                style="@style/main_activity_title_item_container.side">
                <TextView
                    style="@style/main_activity_title_caption"
                    android:id="@+id/user_info_rait_txt"
                    android:text="5"/>
                <TextView
                    style="@style/main_activity_title_text"
                    android:text="@string/header_rating"/>
            </LinearLayout>

            <View style="@style/main_activity_vertical_divider"/>

            <LinearLayout
                style="@style/main_activity_title_item_container">
                <TextView
                    style="@style/main_activity_title_caption"
                    android:id="@+id/user_info_code_lines_txt"
                    android:text="5"/>
                <TextView
                    style="@style/main_activity_title_text"
                    android:text="@string/header_code_lines"/>
            </LinearLayout>

            <View style="@style/main_activity_vertical_divider"/>

            <LinearLayout
                style="@style/main_activity_title_item_container.side">
                <TextView
                    style="@style/main_activity_title_caption"
                    android:id="@+id/user_info_projects_txt"
                    android:text="5"/>
                <TextView
                    style="@style/main_activity_title_text"
                    android:text="@string/header_projects"/>
            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/static_profile_content"/>



    </android.support.design.widget.CoordinatorLayout>
